--- a/styles/hobby.css
+++ b/styles/hobby.css
@@ -51,32 +51,16 @@ body {
   }
 }
 
-@media (max-width: 700px) {
+@media screen and (min-width: 200px) and (max-width: 768px) {
   .container {
     position: relative;
     width: 100%;
-    height: 50vh;
+    height: 30vh;
     overflow: hidden;
   }
   .bubbles {
-    position: relative;
-    margin-left: 5%;
-    display: flex;
-  }
-  .bubbles span {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    background: #ea580c;
-    margin: 0 4px;
-    border-radius: 50%;
-    box-shadow: 0 0 0 10px #f59e0b, 0 0 50px #ea580c, 0 0 100px #ea580c;
-    animation: animate 15s linear infinite;
-    animation-duration: calc(125s / var(--i));
-  }
-  .bubbles span:nth-child(even) {
-    background: 100px#166534;
-    box-shadow: 0 0 0 10px#16a34a 0 0 50px#166534, 0 0 100px#166534;
+    position: absolute;
+    margin: 0;
   }
 }
 /* END ANIMATION */
@@ -138,13 +122,12 @@ body {
   text-align: center;
   line-height: 200%;
 }
-@media (max-width: 80px) {
+@media screen and (min-width: 200px) and (max-width: 768px) {
   #about_me_section {
-    padding: 50px 0;
+    padding: 5px 0;
   }
   #about_me_section h2 {
     text-align: center;
-    font-size: 12vw;
   }
 }
 
@@ -198,4 +181,35 @@ body {
 }
 .slider-nav a:hover {
   opacity: 1;
+}
+@media screen and (min-width: 200px) and (max-width: 768px) {
+  .container-1 {
+    padding: 2rem;
+  }
+  .slider-wrapper {
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
+  }
+
+  .slider img {
+    height: 350px;
+    flex: 0 0 100%;
+    scroll-snap-align: start;
+    object-fit: contain;
+  }
+  .slider-nav {
+    display: flex;
+    /* column-gap: 1rem; */
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+  .slider-nav a {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+  }
 }
